<resources>
    <string name="app_name">MyDB</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="dont_have_account">Dont have Account.</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_main_app">MainApp</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
