<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/email_edittext_login_activity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/password_edittext_login_activity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_edittext_login_activity"
        app:layout_constraintStart_toStartOf="@+id/email_edittext_login_activity"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_login_activity"
        android:autofillHints=""
        tools:targetApi="o"/>

    <Button
        android:id="@+id/login_button_login_acitvity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext_login_activity"
        app:layout_constraintStart_toStartOf="@+id/password_edittext_login_activity"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_login_activity" />

    <TextView
        android:id="@+id/Dont_have_account_textview_Login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        android:text="@string/dont_have_account"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/create_account_login_activity"
        app:layout_constraintStart_toStartOf="@+id/login_button_login_acitvity"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login_acitvity" />

    <TextView
        android:id="@+id/create_account_login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_account"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Dont_have_account_textview_Login_activity"
        app:layout_constraintEnd_toEndOf="@+id/login_button_login_acitvity"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login_acitvity" />

</android.support.constraint.ConstraintLayout>